[package]
name = "dynmap-skin"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.4"
hyper-tls = "0.4.1"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
thiserror = "1.0.13"
pretty_env_logger = "0.4.0"
base64 = "0.12.0"
structopt = "0.3.12"

[profile.release]
lto = "fat"
codegen-units = 1
