[package]
name = "dynmap-skin"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
actix-web = { version = "2", features = ["rustls"] }
actix-rt = "1"
actix-http = "1"
tokio = { version = "0.2.13", features = ["time"] }
rustls = "0.16.0"
webpki-roots = "0.19.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
base64 = "0.12.0"
thiserror = "1.0.13"
pretty_env_logger = "0.4.0"
structopt = "0.3.12"

[profile.release]
lto = "fat"
codegen-units = 1
